fix z-index

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -4,6 +4,7 @@ $component: ".modal";
 
 #{$component} {
     position: fixed;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100vw;
